--- a/src/style/App.css
+++ b/src/style/App.css
@@ -8,3 +8,14 @@ body {
     background-color: rgba(23, 8, 57, 0.814);
     color: #fff;
 }
+
+/* media query */
+@media(max-width: 425px) {
+    .w-20 {
+        width: 20rem !important;
+    }
+    .to-do-list {
+        font-size: 1.2rem !important;
+        padding-top: 1rem !important;
+    }
+}
